// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ListItem /> renders default 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0.5rem 1rem 0 0;
}

<li
    class="c0"
  />
</DocumentFragment>
`;

exports[`<ListItem /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0.5rem 1rem 0 0;
  color: #8d8d8d;
}

<li
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <List /> 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-flow: row wrap;
  width: 60%;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

<ul
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <Menu /> 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-flow: row wrap;
  width: 60%;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c1 {
  justify-content: space-around;
  width: 100%;
  text-transform: uppercase;
}

@media screen and (min-width:40rem) {
  .c1 {
    justify-content: flex-end;
  }
}

<ul
    class="c0 c1"
  />
</DocumentFragment>
`;
